# pywhatwgurl

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs-check.yml  docs.yml  fetch_test_data.yml  main.yml  release.yml  update_wpt_url.yml
.github/workflows/actions/fetch_wpt_url_test_data/: action.yml
docs/: index.md
docs/about/: changelog.md  compliance.md  contributing.md
docs/api/: exceptions.md  url.md  urlsearchparams.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: migration.md  search-params.md  url-components.md  url-parsing.md
docs/overrides/: main.html
pywhatwgurl/: __init__.py  encoding.py  host.py  idna_processor.py  interfaces.py  parser.py  record.py  search_params.py  url.py
tests/: conftest.py  mocks.py
tests/conformance/: README.md  WPT_TRACEABILITY.md  conftest.py  test_wpt_idna.py  test_wpt_percent_encoding.py  test_wpt_setters.py  test_wpt_setters_stripping.py  test_wpt_toascii.py  test_wpt_url_searchparams_integration.py  test_wpt_url_statics.py  test_wpt_url_tojson.py  test_wpt_urlsearchparams.py  test_wpt_urltestdata.py  wpt_data.py
tests/unit/: test_interfaces.py  test_python_api.py
tools/: wpt_url_test_data.py
util/: bump_version.py  wpt_url_test_data.py
